<resources>
    <string name="app_name">Stock Quotes</string>
    <string name="hint">Enter Stock Symbol</string>
    <string name="emptyString">""</string>
    <string name="symbol">"Symbol: "</string>
    <string name="name">"Name: "</string>
    <string name="lastTradePrice">"Last Trade Price: "</string>
    <string name="lastTradeTime">"Last Trade Time: "</string>
    <string name="change">"Change: "</string>
    <string name="fiftyTwoWeekRange">"52 Week Range: "</string>
</resources>
